2007-10-02  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (main): Fix a few coding
	style issues

2007-10-02  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-podcast.c: (parse_rss_items),
	(totem_pl_parser_add_rss), (parse_atom_entry),
	(parse_atom_entries), (totem_pl_parser_add_atom):
	Add Atom feed support, remove useless debug

2007-10-01  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/test-parser.c: (entry_metadata_foreach): Truncate the
	description if it's too long, useful for podcasts testing

	* src/plparse/totem-pl-parser-podcast.c: (totem_pl_parser_is_rss),
	(totem_pl_parser_is_atom), (totem_pl_parser_is_xml_feed),
	(parse_rss_item), (parse_rss_items), (totem_pl_parser_add_rss),
	(totem_pl_parser_add_xml_feed): Add _is_xml_feed, _is_rss and _is_atom
	implement RSS parsing
	* src/plparse/totem-pl-parser-podcast.h: upd
	* src/plparse/totem-pl-parser.c: Also check whether XML files are
	RSS or Atom feeds

2007-10-01  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-qt.c:
	(totem_pl_parser_add_quicktime_metalink):
	* src/plparse/totem-pl-parser-smil.c:
	(totem_pl_parser_add_smil_with_data):
	* src/plparse/totem-pl-parser-wm.c: (totem_pl_parser_add_asx):
	Update for change xine-lib xml parser API changes

2007-10-01  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/Makefile.am:
	* src/plparse/xmllexer.c: (lexer_get_token):
	* src/plparse/xmllexer.h:
	* src/plparse/xmlparser.c:
	* src/plparse/xmlparser.h: Update from xine-lib-1.2 branch,
	with debug removed, and token buffer size increased to 32k

2007-10-01  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (on_tick):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_tick_send): More float/double problems,
	especially in the browser viewer, which was causing the seekbar
	to yo-yo with some streams

2007-10-01  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c: (totem_uri_get_subtitle_for_uri),