@@ -82,3 +82,44 @@ begin
 	repeat = 1
 	config = quit
 end
+
+begin
+	prog = Totem
+	remote = *
+	button = YOUR_BUTTON
+	repeat = 1
+	config = up
+end
+
+begin
+	prog = Totem
+	remote = *
+	button = YOUR_BUTTON
+	repeat = 1
+	config = down
+end
+
+begin
+	prog = Totem
+	remote = *
+	button = YOUR_BUTTON
+	repeat = 1
+	config = left
+end
+
+begin
+	prog = Totem
+	remote = *
+	button = YOUR_BUTTON
+	repeat = 1
+	config = right
+end
+
+begin
+	prog = Totem
+	remote = *
+	button = YOUR_BUTTON
+	repeat = 1
+	config = select
+end
+
