@@ -1,3 +1,10 @@
+2007-10-04  Bastien Nocera  <hadess@hadess.net>
+
+	* data/lirc_example: Add up/down/left/right/select DVD menu
+	items to the list of actions as examples (Closes: #483239)
+	* src/totem.c: (totem_action_handle_key_press): Add
+	ability to select a menu item with button "5" on the keypad
+
 2007-10-02  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-video-thumbnailer.c: (main): Fix a few coding
